--- a/Develop/package.json
+++ b/Develop/package.json
@@ -1,7 +1,6 @@
 {
   "name": "develop",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -15,6 +14,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.18.0",
     "pg": "^8.11.5",
     "sequelize": "^6.37.3"
   },
@@ -23,5 +23,6 @@
     "eslint-config-prettier": "^9.1.0",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5"
-  }
+  },
+  "description": ""
 }
